Improve logo sizes on Clients page and homepage

--- a/clients.html
+++ b/clients.html
@@ -102,43 +102,43 @@
                 <p>Throughout my freelancing career, I've helped clients from a wide range of industries achieve their goal of improving their online presence. Here is a selection of clients who I've worked with recently.</p>
                 <div class="portfolio">
                     <!-- Put logos here -->
-                    <div class="row center">
-                        <div class="col-3"><img src="images/logos/Audrey-Zeitoun-Coaching-Logo.png"><p><strong>Audrey Zeitoun Coaching</strong></p></div>
-                        <div class="col-3"><img src="images/logos/the-bamboo-wardrobe.jpg"><p><strong>The Bamboo Wardrobe</strong></p></div>
-                        <div class="col-3"><img src="images/logos/British-Library.png"><p><strong>The British Library</strong></p></div>
-                        <div class="col-3"><img src="images/logos/CNT_Associates-Empowering-Your-Vision.png"><p><strong>CNT Associates</strong></p></div>
+                    <div class="row center" style="padding:0">
+                        <div class="col-3" style="padding:0"><img src="images/logos/audrey-zeitoun-coaching.png" alt="Audrey Zeitoun Coaching"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/the-bamboo-wardrobe.png" alt="The Bamboo Wardrobe"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/british-library-2.png" alt="The British Library"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/cnt-associates-2.png" alt="CNT Associates"></div>
                         
                     </div>
-                    <div class="row center">
-                        <div class="col-3"><img src="images/logos/crazy-thumbs-the-video-game-store.jpg"><p><strong>Crazy Thumbs</strong></p></div>
-                        <div class="col-3"><img src="images/logos/Emrys-Consulting-logo.png"><p><strong>Emrys Consulting</strong></p></div>
-                        <div class="col-3"><img src="images/logos/encalife-logo-1.png"><p><strong>encalife</strong></p></div>
-                        <div class="col-3"><img src="images/logos/Esme-Learning-logo-200px.png"><p><strong>Esme Learning Solutions</strong></p></div>
+                    <div class="row center" style="padding:0">
+                        <div class="col-3" style="padding:0"><img src="images/logos/crazy-thumbs.png" alt="Crazy Thumbs"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/emrys-consulting.png" alt="Emrys Consulting"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/encalife.png" alt="encalife"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/esme-learning.png" alt="Esme Learning"></div>
                         
                     </div>
-                    <div class="row center">
-                        <div class="col-3"><img src="images/logos/EMW-Event-Meets-World-by-DAPsLoco-NB-Blc.jpg"><p><strong>Events Meets World</strong></p></div>
-                        <div class="col-3"><img src="images/logos/findhtebalance-logo-dark.png"><p><strong>Find the Balance</strong></p></div>
-                        <div class="col-3"><img src="images/logos/Future-Communities.jpg"><p><strong>Future Communities UK</strong></p></div>
-                        <div class="col-3"><img src="images/logos/GDPR-Compliance-Consultancy-logo-small.png"><p><strong>The GDPR Compliance Consultancy</strong></p></div>
+                    <div class="row center" style="padding:0">
+                        <div class="col-3" style="padding:0"><img src="images/logos/events-meets-world.png" alt="Events Meets World"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/find-the-balance.png" alt="Find the Balance"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/future-communities.png" alt="Future Communities"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/the-gdpr-compliance-consultancy.png" alt="The GDPR Compliance Consultancy"></div>
                     </div>
-                    <div class="row center">
-                        <div class="col-3"><img src="images/logos/GLL-better-for-everyone.gif"><p><strong>GLL</strong></p></div>
-                        <div class="col-3"><img src="images/logos/Global-Banking-School.png"><p><strong>Global Banking School</strong></p></div>
-                        <div class="col-3"><img src="images/logos/happily-clappily-ever-laughter-logo.png"><p><strong>Happily Clappily Ever Laughter</strong></p></div>
-                        <div class="col-3"><img src="images/logos/Jenup-logo-transparent.png"><p><strong>JenUp</strong></p></div>
+                    <div class="row center" style="padding:0">
+                        <div class="col-3" style="padding:0"><img src="images/logos/gll.png" alt="GLL"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/global-banking-school.png" alt="Global Banking School"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/happily-clappily-ever-laughter.png" alt="Happily Clappily Ever Laughter"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/jenup.png" alt="JenUp"></div>
                     </div>
-                    <div class="row center">
-                        <div class="col-3"><img src="images/logos/MeitamLogo.png"><p><strong>Meitam London</strong></p></div>
-                        <div class="col-3"><img src="images/logos/NeroWireArt-200x200.png"><p><strong>NeroWireArt</strong></p></div>
-                        <div class="col-3"><img src="images/logos/New-Haw-Community-Centre-Logo.png"><p><strong>New Haw Community Centre</strong></p></div>
-                        <div class="col-3"><img src="images/logos/Pathways21-logo.png"></i><p><strong>Pathways 21</strong></p></div>
+                    <div class="row center" style="padding:0">
+                        <div class="col-3" style="padding:0"><img src="images/logos/meitam-london.png" alt="Meitam London"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/nerowireart-2.png" alt="NeroWireArt"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/new-haw-community-centre.png" alt="New Haw Community Centre"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/pathways-21.png" alt="Pathways 21"></div>
                     </div>
-                    <div class="row center">
-                        <div class="col-3"><img src="images/logos/The-Pendle-Witch-Company.png"></i><p><strong>The Pendle Witch Company</strong></p></div>
-                        <div class="col-3"><img src="images/logos/tizane.png"><p><strong>Tizane</strong></p></div>
-                        <div class="col-3"><img src="images/logos/Together-Matters.png"><p><strong>Together Matters</strong></p></div>
-                        <div class="col-3"><img src="images/logos/wardells-wardrobe-logo.png"><p><strong>Wardell's Wardrobe</strong></p></div>
+                    <div class="row center" style="padding:0">
+                        <div class="col-3" style="padding:0"><img src="images/logos/the-pendle-witch-company.png" alt="The Pendle Witch Company"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/tizane.png" alt="Tizane"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/together-matters.png" alt="Together Matters"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/wardells-wardrobe.png" alt="Wardell's Wardrobe"></div>
                     </div>
             </div>
             </div>
