--- a/index.html
+++ b/index.html
@@ -399,22 +399,22 @@
                 <hr>
                 <div class="row">
                     <div class="col-2">
-                        <img src="images/logos/ShopifyPartners_Primary.png" alt="Shopify Partners">
+                        <img src="images/logos/shopify-partners.png" alt="Shopify Partners">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/wix_black.png" alt="Wix">
+                        <img src="images/logos/wix.png" alt="Wix">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/WordPress-logotype-alternative.png" alt="WordPress">
+                        <img src="images/logos/wordpress.png" alt="WordPress">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/British-Library.png" alt="British Library">
+                        <img src="images/logos/british-library.png" alt="British Library">
                     </div>
                     <div class="col-2">
                         <img src="images/logos/British-Library-BIPC-Delivery-Partner.png" alt="British Library BIPC Delivery Partner">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/CNT-Associates.png" alt="CNT Associates">
+                        <img src="images/logos/cnt-associates.png" alt="CNT Associates">
                     </div>
                 </div>
             </div>
