--- a/website-development.html
+++ b/website-development.html
@@ -365,10 +365,10 @@
                             <li>MailerLite integration</li>
                             <li>Google Search Console submission</li>
                         </ul>
-                        <div class="padding-btn">
+                        <!-- <div class="padding-btn">
                             <a class ="btn-secondary" href="https://www.audreyzcoaching.com"
                             target="_blank" rel="noopener noreferrer">View Client</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
