--- a/clients.html
+++ b/clients.html
@@ -105,13 +105,13 @@
                     <div class="row center" style="padding:0">
                         <div class="col-3" style="padding:0"><img src="images/logos/audrey-zeitoun-coaching.png" alt="Audrey Zeitoun Coaching"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/the-bamboo-wardrobe.png" alt="The Bamboo Wardrobe"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/british-library-2.png" alt="The British Library"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/Kiko-by-Astons-of-London.svg" alt="Kiko by Astons of London"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/cnt-associates-2.png" alt="CNT Associates"></div>
                         
                     </div>
                     <div class="row center" style="padding:0">
                         <div class="col-3" style="padding:0"><img src="images/logos/crazy-thumbs.png" alt="Crazy Thumbs"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/emrys-consulting.png" alt="Emrys Consulting"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/emrys-consulting.svg" alt="Emrys Consulting"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/encalife.png" alt="encalife"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/esme-learning.png" alt="Esme Learning"></div>
                         
