--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -96,18 +96,21 @@
             <div class="container-1140 padding-top padding-bottom">
                 <p>A selection of posters, flyers and leaflet designs.</p>
                 <div class="design padding-top">
-                    <img id="0" class="myImg" src="images/design/Powered-by-Shopify_Building-Your-First-E-commerce-Store.png" alt="Powered by Shopify: Building Your First E-commerce Store" onClick="openModal(0)">
-                    <img id="1" class="myImg" src="images/design/Funding-and-Support-for-Shopify-and-Other-Platforms.png" alt="CNT Associates: Funding and Support For Shopify and Other Platforms" onClick="openModal(1)">
-                    <img id="2" class="myImg" src="images/design/World-Laughter-Day-2023.jpg" alt="World Laughter Day 2023" onClick="openModal(2)">
-                    <img id="3" class="myImg" src="images/design/Regulators-are-Watching-Your-Website.jpg" alt="Regulators Are Watching Your Website" onClick="openModal(3)">
-                    <img id="4" class="myImg" src="images/design/British-Library-Business-IP-Centre-Building-an-Online-Store-Using-Shopify.png" alt="British Library Business & IP Centre: Building an Online Store Using Shopify" onClick="openModal(4)">
-                    <img id="5" class="myImg" src="images/design/5.jpg" alt="CNT Associates: Getting Your Business Online" onClick="openModal(5)">
-                    <img id="6" class="myImg" src="images/design/6.jpg" alt="Future Communities: Loneliness Project" onClick="openModal(6)">
-                    <img id="7" class="myImg" src="images/design/7.jpg" alt="Happily Clappily Ever Laughter: Loneliness Project" onClick="openModal(7)">
-                    <img id="8" class="myImg" src="images/design/8.jpg" alt="Pre-loved Sale and Fundraiser" onClick="openModal(8)">
-                    <img id="9" class="myImg" src="images/design/9.jpg" alt="Reel Women Introductory Video-Making Course" onClick="openModal(9)">
-                    <img id="10" class="myImg" src="images/design/10.jpg" alt="Shadowlight Group Flash Frame Artist Presentation 2010" onClick="openModal(10)">
-                    <img id="11" class="myImg" src="images/design/11.jpg" alt="TK Maxx Valentine's Day 2014" onClick="openModal(11)">
+                    <img id="0" class="myImg" src="images/design/0.jpg" alt="Laugh, Sing & Play leaflet" onClick="openModal(0)">
+                    <img id="1" class="myImg" src="images/design/1.jpg" alt="Funding and Support for Women-led Businesses 14 September 2023" onClick="openModal(1)">
+                    <img id="2" class="myImg" src="images/design/2.jpg" alt="Bexley Talking Business: Getting Your Business Online for Beginners" onClick="openModal(2)">
+                    <img id="3" class="myImg" src="images/design/3.jpg" alt="Powered by Shopify: Building Your First E-commerce Store" onClick="openModal(3)">
+                    <img id="4" class="myImg" src="images/design/4.jpg" alt="CNT Associates: Funding and Support For Shopify and Other Platforms" onClick="openModal(4)">
+                    <img id="5" class="myImg" src="images/design/5.jpg" alt="World Laughter Day 2023" onClick="openModal(5)">
+                    <img id="6" class="myImg" src="images/design/6.jpg" alt="Regulators Are Watching Your Website!" onClick="openModal(6)">
+                    <img id="7" class="myImg" src="images/design/7.jpg" alt="British Library Business & IP Centre: Building an Online Store Using Shopify" onClick="openModal(7)">
+                    <img id="8" class="myImg" src="images/design/8.jpg" alt="CNT Associates: Getting Your Business Online" onClick="openModal(8)">
+                    <img id="9" class="myImg" src="images/design/9.jpg" alt="Future Communities: Loneliness Project" onClick="openModal(9)">
+                    <img id="10" class="myImg" src="images/design/10.jpg" alt="Happily Clappily Ever Laughter: Loneliness Project" onClick="openModal(10)">
+                    <img id="11" class="myImg" src="images/design/11.jpg" alt="Pre-loved Sale and Fundraiser" onClick="openModal(11)">
+                    <img id="12" class="myImg" src="images/design/12.jpg" alt="Reel Women Introductory Video-Making Course" onClick="openModal(12)">
+                    <img id="13" class="myImg" src="images/design/13.jpg" alt="Shadowlight Group Flash Frame Artist Presentation 2010" onClick="openModal(13)">
+                    <img id="14" class="myImg" src="images/design/14.jpg" alt="TK Maxx Valentine's Day 2014" onClick="openModal(14)">
                 </div>
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
