--- a/website-development.html
+++ b/website-development.html
@@ -119,6 +119,28 @@
 
                 <h2 class="padding-top">Website Development Clients</h2>
 
+                <div id="wanandco" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="images/clients/Wan-and-Co.jpg" alt="Wan&Co">
+                        </div>
+                        <div class="col-7">
+                            <h2>Wan&Co</h2>
+                            <h3 style="font-size: 18px;">A clothing brand with a big ambition to reduce waste</h3>
+                            <ul>
+                                <li>Website development</li>
+                                <li>Facebook Shop and Instagram Shop connection</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://wanandco.com/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="jenup" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
@@ -138,7 +160,7 @@
                     </div>
                 </div>
 
-            <div id="pendle-witch-company" class="shadow-box-2">
+            <!-- <div id="pendle-witch-company" class="shadow-box-2">
                 <div class="row-2">
                     <div class="col-5">
                         <img src="https://sybiltec.com/images/clients/The-Pendle-Witch-Company-2.jpg" alt="The Pendle Witch Company">
@@ -157,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             
             <div id="together-matters" class="shadow-box-2">
                 <div class="row-2">
@@ -186,7 +208,7 @@
                     </div>
                     <div class="col-7">
                         <h2>Crazy Thumbs</h2>
-                        <h3 style="font-size: 18px;">Specialising in vintage video games and equipment as well as contemporary titles and trade-ins.</h3>
+                        <h3 style="font-size: 18px;">Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</h3>
                         <ul>
                             <li>Shopify store development</li>
                             <li>Advanced navigation system</li>
@@ -226,7 +248,7 @@
                 </div>
             </div>
 
-            <div id="tristarspas" class="shadow-box-2">
+            <!-- <div id="tristarspas" class="shadow-box-2">
                 <div class="row-2">
                     <div class="col-5">
                         <img src="https://sybiltec.com/images/clients/Tristarspas.jpg" alt="Tristarspas">
@@ -240,7 +262,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- <div id="x-blu" class="shadow-box-2">
                 <div class="row-2">
@@ -352,7 +374,7 @@
                 </div>
             </div>                
 
-            <div id="audrey-zeitoun-coaching" class="shadow-box-2">                         
+            <!-- <div id="audrey-zeitoun-coaching" class="shadow-box-2">                         
                 <div class="row-2">
                     <div class="col-5">   
                         <img src="https://sybiltec.com/images/clients/Audrey-Zeitoun-Coaching-2.jpg" alt="Audrey Zeitoun Coaching">                         
@@ -365,15 +387,15 @@
                             <li>MailerLite integration</li>
                             <li>Google Search Console submission</li>
                         </ul>
-                        <!-- <div class="padding-btn">
+                         <div class="padding-btn">
                             <a class ="btn-secondary" href="https://www.audreyzcoaching.com"
                             target="_blank" rel="noopener noreferrer">View Client</a>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- <div id="blue-horizon-lnw" class="shadow-box-2">                         
+            <div id="blue-horizon-lnw" class="shadow-box-2">                         
                 <div class="row-2">
                     <div class="col-5">   
                         <img src="https://sybiltec.com/images/clients/Blue-Horizon-LNW.jpg" alt="Blue Horizon LNW">                         
@@ -389,28 +411,6 @@
                         </ul>              
                         <div class="padding-btn">
                             <a class ="btn-secondary" href="https://www.bluehorizonlnw.com"
-                            target="_blank" rel="noopener noreferrer">View Client</a>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
-            <div id="new-haw-community-centre" class="shadow-box-2">                         
-                <div class="row-2">
-                    <div class="col-5">   
-                        <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-2.jpg" alt="New Haw Community Centre">                         
-                    </div>
-                    <div class="col-7">
-                        <h2>New Haw Community Centre</h2>
-                        <h3 style="font-size: 18px;">At the Centre of Our Community</h3>
-                        <ul>
-                            <li>Theme refresh</li>
-                            <li>Theme customisations</li>
-                            <li>Blog post publishing</li>
-                            <li>Google Search Console submission</li>
-                        </ul>
-                        <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
                             target="_blank" rel="noopener noreferrer">View Client</a>
                         </div>
                     </div>
