--- a/website-design.html
+++ b/website-design.html
@@ -102,10 +102,52 @@
 
                 <h2 class="padding-top">Website Design Clients</h2>
 
+                <div id="new-haw-community-centre" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>New Haw Community Centre</h2>
+                            <h3 style="font-size: 18px;">At the Centre of Our Community</h3>
+                            <ul>
+                                <li>Website redesign</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="kiko" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="images/clients/kiko-by-astons-of-london.jpg" alt="Kiko by Astons of London">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>Kiko by Astons of London</h2>
+                            <h3 style="font-size: 18px;">Personalised Gifts for Dogs</h3>
+                            <ul>
+                                <li>Website design</li>
+                                <li>WooCommerce setup</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://astonsoflondon.co.uk"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="emrys-consulting" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Emrys-Consulting-3.jpg" alt="Emrys Consulting">
+                            <img src="images/clients/Emrys-Consulting-4.jpg" alt="Emrys Consulting">
                         </div>
                         <div class="col-7">
                             <h2>Emrys Consulting</h2>
@@ -209,6 +251,10 @@
                                 <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
                         </div>
                     </div>
                 </div>
