--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -101,7 +101,7 @@
                     <li>Theme customisations</li>
                     <li>Managing products (if you have an e-commerce store)</li>
                 </ul>
-            <h2>Packages</h2>
+            <!-- <h2>Packages</h2>
             <div class="row">
                 <div class="col-4">
                     <div class="blog-card">       
@@ -151,9 +151,30 @@
                         </div>
                     </div>
                 </div>
-            </div>   
+            </div>    -->
 
             <h2>Website Maintenance Clients</h2>
+            <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
+                <div class="row-2">
+                    <div class="col-5">   
+                        <img src="https://sybiltec.com/images/clients/The-GDPR-Compliance-Consultancy-2.jpg" alt="The GDPR Compliance Consultancy">                         
+                    </div>
+                    <div class="col-7">
+                        <h2>The GDPR Compliance Consultancy</h2>
+                        <h3 style="font-size: 18px;">Getting Data Protection Right</h3>
+                        <ul>
+                            <li>Website maintenance</li>
+                            <li>Theme refresh</li>
+                            <li>Theme customisations</li>
+                        </ul>        
+                        <div class="padding-btn">
+                            <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
+                            target="_blank" rel="noopener noreferrer">View Client</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
             <div id="meitam-london" class="shadow-box-2">
                 <div class="row-2">
                     <div class="col-5">
