Add canonical tag

--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
         <title>Blog | London Website Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/blog">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Blog | London Website Design & Development | Sybiltec" />
