--- a/faqs.html
+++ b/faqs.html
@@ -180,6 +180,7 @@
         <title>FAQs | London Website Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides website design and development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/faqs">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="FAQs | London Website Design & Development | Sybiltec" />
