--- a/install-ga4-wix-website.html
+++ b/install-ga4-wix-website.html
@@ -27,6 +27,7 @@
         <title>How to Install GA4 on Your Wix Website | Sybiltec</title>       
         <meta name="Description" content="If you haven't installed GA4 on your Wix website yet, then you need to do it before 1 July 2023. Learn how to connect Google Analytics by following these steps.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/install-ga4-wix-website">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="How to Install GA4 on Your Wix Website | Sybiltec" />
