--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -27,6 +27,7 @@
         <title>How to Install GA4 on Your WordPress Website | Sybiltec</title>       
         <meta name="Description" content="Do you need to install GA4 on your WordPress website? Read my blog article to learn how to add Google Analytics using the free MonsterInsights plugin.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/install-ga4-wordpress-website">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="How to Install GA4 on Your WordPress Website | Sybiltec" />
