--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -15,6 +15,7 @@
         <title>Leaflet Design | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Are you organising or promoting an event? Sybil Mayard can design a poster, leaflet, flyer or social media graphic. View the gallery of my past design projects.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/leaflet-design">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Leaflet Design | London Web Design & Development | Sybiltec" />
