--- a/shopify-woocommerce.html
+++ b/shopify-woocommerce.html
@@ -27,6 +27,7 @@
         <title>Shopify vs WooCommerce: What Are the Differences? | Sybiltec</title>       
         <meta name="Description" content="Shopify and WooCommerce are two of the most popular e-commerce platforms, but how do they compare? Read this blog the find out about the pros and cons.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/shopify-woocommerce">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Shopify vs WooCommerce: What Are the Differences? | Sybiltec" />
