--- a/training.html
+++ b/training.html
@@ -15,6 +15,7 @@
         <title>Training | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/training">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Training | London Web Design & Development | Sybiltec" />
