--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -27,6 +27,7 @@
         <title>How Do I Upgrade to Google Analytics 4? | Sybiltec</title>       
         <meta name="Description" content="Universal Analytics will stop processing new data on 1st July 2023. Read my guide on how to upgrade to Google Analytics 4 so that you don't miss the deadline.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/upgrade-google-analytics-4">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="How Do I Upgrade to Google Analytics 4? | Sybiltec" />
