--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -27,6 +27,7 @@
         <title>The Web Design Process Explained in 12 Easy Steps | Sybiltec</title>       
         <meta name="Description" content="Thank you for considering me as your web designer. If you're wondering what the web design process looks like, read this article to understand what's involved.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="The Web Design Process Explained in 12 Easy Steps | Sybiltec" />
