--- a/website-design.html
+++ b/website-design.html
@@ -15,6 +15,7 @@
         <title>Website Design | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here. ">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/website-design">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Website Design | London Web Design & Development | Sybiltec" />
