--- a/website-development.html
+++ b/website-development.html
@@ -15,6 +15,7 @@
         <title>Website Development | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard's website development service is perfect for you if you have an existing website and need bespoke, one-off development tasks to be completed.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/website-development">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Website Development | London Web Design & Development | Sybiltec" />
