--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -15,6 +15,7 @@
         <title>Website Maintenance | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Once you have launched your website, you'll need to keep it maintained. Purchase one of Sybil Mayard's website maintenance services for ongoing support.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/website-maintenance">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Website Maintenance | London Web Design & Development | Sybiltec" />
