--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <title>Home | Kent & London Web Design and Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="London Website Design & Development | Sybiltec" />
