--- a/install-ga4-shopify-website.html
+++ b/install-ga4-shopify-website.html
@@ -27,6 +27,7 @@
         <title>How to Install GA4 on Your Shopify Website | Sybiltec</title>       
         <meta name="Description" content="Have you installed GA4 on your Shopify website? If not, read this article to learn how to add Google Analytics to your Shopify store in a few simple steps.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/install-ga4-shopify-website">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="How to Install GA4 on Your Shopify Website | Sybiltec" />
